[package]
name = "dns-updater"
version = "0.1.1"
edition = "2021"
description = "A service that periodically checks and synchronises the internet facing ip to AWS Route53, useful for running home services behind changing ip addresses"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.15.0"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
tokio_schedule = "0.3.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
